--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="box">
     <center><h1><span class="green">Govinda</span>  <span class="red"> Bolo</span>   <span class="green">Hari</span>  <span class="green">Gopala</span>  <span class="red">Bolo</span></h1></center>
+   
     <iframe width="560" height="315" src="https://www.youtube.com/embed/obppCkYGqI8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    
-
+    </div>
+    <div class="box">
     <center><h1>  <span class="orange">Madhurashtakam</span> </h1></center>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/YIU-7ZesjTU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    
+    </div>  
 </body>
 </html>
